--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@mui/material": "^5.14.14",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
+    "country-state-city": "^3.2.1",
     "dotenv": "^16.1.3",
     "eslint-config-react-app": "^7.0.1",
     "react": "^18.2.0",
     "react-calendar": "^4.6.1",
+    "react-country-region-selector": "^3.6.1",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
